crates/phosphor/tests/snapshots/screen_pickers__3d-80.snap
---
source: crates/phosphor/tests/screen_pickers.rs
expression: frame.to_text(&buf)
---
screen 3d-80 · phosphor-dark · 80x24 cells
  Every row is what runtime/pickers.scm answered through
    phosphor_steel::picker::rows against a real Store — not a fixture. A
    change to the Scheme moves these frames.
  The rows are unfiltered and unmatched: nucleo owns a thread pool and lives
    in the binary, so a golden frame poses the settled list rather than
    running the matcher. RunVm::matched is therefore false on every run,
    which is what picker.rs's row_of already records as T047's to spend.
  2a draws NO preview pane at 120 columns, and that is a finding rather
    than a composition choice: PREVIEW_AT is 100 and is checked against the
    float's *body*, which §8 caps at 80% of the screen less two columns of
    border — 94 at 120 cols. T045's number is written in terminal columns
    and spent in body columns. OPEN-QUESTIONS.md §45; the test that pins it
    is the_preview_pane_is_shed_at_120_columns_....
    What 2a's mockup draws there is a *diff* preview, which is T063 and does
    not exist either — so both halves of that pane are owed.
  3d's rows carry `\u{25cf}N unseen` from the store and no `activity` column:
    the mockup's second annotation is a session fact (T050) and nothing in
    the vocabulary answers it yet.
  8a greps the *open buffer*, not the workspace — pickers.scm states the
    limit and its reason (no capability searches files on disk).
  8a's row is the WHOLE matched line (`src/retry.rs:4  \u{25cf}  use
    util::jitter;`). The mockup at TUI Mockups.dc.html:165 draws the matched
    *fragment* instead (`\u{25cf} .min(policy.max_delay)`), which is one half
    of OPEN-QUESTIONS.md §12 — and this frame is the build's answer to it,
    arrived at by pickers.scm rather than by a ruling. Flagged, not folded.
  No footer: main.rs's picker_float composes none, and §4's `every legal key
    always visible` is owed by T045's own row rather than by this frame.

text
     0         1         2         3         4         5         6         7
     01234567890123456789012345678901234567890123456789012345678901234567890123456789
  0 │   1  //! Retry policy — exponential backoff with jitter for the fetch client.  │
  1 │   2  //! Used by `fetch::request` when a transient error is retried.           │
  2 │   3                                                                            │
  3 │   4  use util::jitter;                                                         │
  4 │   5                                                                            │
  5 │   6  pub struct RetryPolicy {                                                  │
  6 │   7      pub max_attempts: u32,                                                │
  7 │   8      pub base_delay: Duration,                                             │
  8 │   9      pub max_delay: Duration,                                              │
  9 │  10  }                                                                         │
 10 │  11                                                                            │
 11 │────────────────────────────────────────────────────────────────────────────────│
 12 │  files                                                                         │
 13 │────────────────────────────────────────────────────────────────────────────────│
 14 │                                                                                │
 15 │  >                                                                        5/5  │
 16 │  Cargo.toml                                                                    │
 17 │  src/deploy  ●1 unseen                                                         │
 18 │  src/fetch.rs  ●2 unseen                                                       │
 19 │  src/main.rs                                                                   │
 20 │  src/retry.rs  ●2 unseen                                                       │
 21 │                                                                                │
 22 │────────────────────────────────────────────────────────────────────────────────│
 23 │                                                                                │

fg
     0         1         2         3         4         5         6         7
     01234567890123456789012345678901234567890123456789012345678901234567890123456789
  0 │llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll│
  1 │llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll│
  2 │llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll│
  3 │llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll│
  4 │llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll│
  5 │llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll│
  6 │llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll│
  7 │llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll│
  8 │llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll│
  9 │llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll│
 10 │llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll│
 11 │oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo│
 12 │hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh│
 13 │CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC│
 14 │hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh│
 15 │hhjjhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhjjjhh│
 16 │hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh│
 17 │hhhhhhhhhhhhjjaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh│
 18 │hhhhhhhhhhhhhhjjaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh│
 19 │hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh│
 20 │hhhhhhhhhhhhhhjjaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh│
 21 │hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh│
 22 │CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC│
 23 │hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh│

bg
     0         1         2         3         4         5         6         7
     01234567890123456789012345678901234567890123456789012345678901234567890123456789
  0 │gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg│
  1 │gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg│
  2 │gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg│
  3 │gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg│
  4 │gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg│
  5 │gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg│
  6 │gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg│
  7 │gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg│
  8 │gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg│
  9 │gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg│
 10 │gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg│
 11 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
 12 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
 13 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
 14 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
 15 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
 16 │xxppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppxx│
 17 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
 18 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
 19 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
 20 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
 21 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
 22 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
 23 │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│

style
     0         1         2         3         4         5         6         7
     01234567890123456789012345678901234567890123456789012345678901234567890123456789
  0 │................................................................................│
  1 │................................................................................│
  2 │................................................................................│
  3 │................................................................................│
  4 │................................................................................│
  5 │................................................................................│
  6 │................................................................................│
  7 │................................................................................│
  8 │................................................................................│
  9 │................................................................................│
 10 │................................................................................│
 11 │................................................................................│
 12 │................................................................................│
 13 │................................................................................│
 14 │................................................................................│
 15 │....r...........................................................................│
 16 │................................................................................│
 17 │................................................................................│
 18 │................................................................................│
 19 │................................................................................│
 20 │................................................................................│
 21 │................................................................................│
 22 │................................................................................│
 23 │................................................................................│

legend
  a  #3ddc97  actors.claude
  g  #0c0f0c  neutrals.ground = chrome.mode_chip_fg = chrome.tab_bar
  h  #c6cec6  neutrals.text = syntax.text
  j  #59635a  neutrals.meta = syntax.comment
  l  #232823  neutrals.dimmed_under_float
  o  #2a5c44  regions.anchor_undercurl = float.informational
  p  #26332a  regions.selection
  x  #101410  float.body
  C  #242a24  chrome.divider

style
  ~  undercurl — SGR 4:3 wrapped around the glyph, plus Modifier::UNDERLINED
  _  Modifier::UNDERLINED alone (the degraded path)
